2014-02-27  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile: Add llround power8
	implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_llround-power8.S: New file:
	POWER8 llround ifunc implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_llround.c (__lllround): Add
	POWER8 implementation.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_llround.S: New file:
	POWER8 llround implementation.

2014-02-27  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile: Add llrint power8
	implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_llrint-power8.S: New file:
	POWER8 llrint ifunc implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_llrint.c (__lllrint): Add
	POWER8 implementation.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_llrint.S: New file:
	POWER8 llrint implementation.

2014-02-27  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile: Add finite power8
	implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_finite-power8.S: New file:
	POWER8 finite ifunc implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_finite.c (__finite): Add
	POWER8 implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_finitef.c (__finitef):
	Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_finite.S: New file:
	POWER8 finite implementation.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_finitef.S: New file.

2014-02-27  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile: Add isinf power8
	implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_isinf-power8.S: New file:
	POWER8 isinf ifunc implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_isinf.c (__isinf): Add
	POWER8 implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_isinff.c (__isinff):
	Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_isinf.S: New file: